welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:9: error: value ==- is not a member of Int
  if (maxi2==-100) {
           ^